src/grammar/g4/RMGLParser.ts
// Generated from ./src/grammar/g4/RMGLParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import RMGLParserListener from "./RMGLParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class RMGLParser extends Parser {
	public static readonly Rect = 1;
	public static readonly Circle = 2;
	public static readonly Line = 3;
	public static readonly SimpleLine = 4;
	public static readonly PolyLine = 5;
	public static readonly CurveLine = 6;
	public static readonly LArrow = 7;
	public static readonly RArrow = 8;
	public static readonly X = 9;
	public static readonly Y = 10;
	public static readonly W = 11;
	public static readonly H = 12;
	public static readonly Angle = 13;
	public static readonly Color = 14;
	public static readonly Text = 15;
	public static readonly Alpha = 16;
	public static readonly BorderWidth = 17;
	public static readonly BorderColor = 18;
	public static readonly BorderAlpha = 19;
	public static readonly FontSize = 20;
	public static readonly FontColor = 21;
	public static readonly Comma = 22;
	public static readonly Semicolon = 23;
	public static readonly Quotation = 24;
	public static readonly Slash = 25;
	public static readonly TokenChar = 26;
	public static readonly NL = 27;
	public static readonly Space = 28;
	public static readonly Char = 29;
	public static readonly AnnotationQuotation = 30;
	public static readonly AnnotationChar = 31;
	public static readonly LineAnnotationNL = 32;
	public static readonly LineAnnotationChar = 33;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_statement = 0;
	public static readonly RULE_variableName = 1;
	public static readonly RULE_charText = 2;
	public static readonly RULE_annotationText = 3;
	public static readonly RULE_lineAnnotationText = 4;
	public static readonly RULE_lineGraphicDefine = 5;
	public static readonly RULE_graphicType = 6;
	public static readonly RULE_propertyDefine = 7;
	public static readonly RULE_textDefine = 8;
	public static readonly RULE_annotationDefine = 9;
	public static readonly RULE_linkDefine = 10;
	public static readonly literalNames: (string | null)[] = [ null, "'Rect'", 
                                                            "'Circle'", 
                                                            "'--'", "'-line-'", 
                                                            "'-poly-'", 
                                                            "'-curve-'", 
                                                            "'<'", "'>'", 
                                                            "'x'", "'y'", 
                                                            "'w'", "'h'", 
                                                            "'angle'", "'color'", 
                                                            "'text'", "'alpha'", 
                                                            "'borderWidth'", 
                                                            "'borderColor'", 
                                                            "'borderAlpha'", 
                                                            "'fontSize'", 
                                                            "'fontColor'", 
                                                            "','", "';'", 
                                                            null, "'//'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "Rect", 
                                                             "Circle", "Line", 
                                                             "SimpleLine", 
                                                             "PolyLine", 
                                                             "CurveLine", 
                                                             "LArrow", "RArrow", 
                                                             "X", "Y", "W", 
                                                             "H", "Angle", 
                                                             "Color", "Text", 
                                                             "Alpha", "BorderWidth", 
                                                             "BorderColor", 
                                                             "BorderAlpha", 
                                                             "FontSize", 
                                                             "FontColor", 
                                                             "Comma", "Semicolon", 
                                                             "Quotation", 
                                                             "Slash", "TokenChar", 
                                                             "NL", "Space", 
                                                             "Char", "AnnotationQuotation", 
                                                             "AnnotationChar", 
                                                             "LineAnnotationNL", 
                                                             "LineAnnotationChar" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"statement", "variableName", "charText", "annotationText", "lineAnnotationText", 
		"lineGraphicDefine", "graphicType", "propertyDefine", "textDefine", "annotationDefine", 
		"linkDefine",
	];
	public get grammarFileName(): string { return "RMGLParser.g4"; }
	public get literalNames(): (string | null)[] { return RMGLParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return RMGLParser.symbolicNames; }
	public get ruleNames(): string[] { return RMGLParser.ruleNames; }
	public get serializedATN(): number[] { return RMGLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, RMGLParser._ATN, RMGLParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, RMGLParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 25;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===27) {
				{
				{
				this.state = 22;
				this.match(RMGLParser.NL);
				}
				}
				this.state = 27;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 31;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 31;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 1:
				case 2:
					{
					this.state = 28;
					this.lineGraphicDefine();
					}
					break;
				case 25:
					{
					this.state = 29;
					this.annotationDefine();
					}
					break;
				case 26:
					{
					this.state = 30;
					this.linkDefine();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 33;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 100663302) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableName(): VariableNameContext {
		let localctx: VariableNameContext = new VariableNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, RMGLParser.RULE_variableName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 35;
			this.match(RMGLParser.TokenChar);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charText(): CharTextContext {
		let localctx: CharTextContext = new CharTextContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, RMGLParser.RULE_charText);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			this.match(RMGLParser.TokenChar);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public annotationText(): AnnotationTextContext {
		let localctx: AnnotationTextContext = new AnnotationTextContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, RMGLParser.RULE_annotationText);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===31) {
				{
				{
				this.state = 39;
				this.match(RMGLParser.AnnotationChar);
				}
				}
				this.state = 44;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lineAnnotationText(): LineAnnotationTextContext {
		let localctx: LineAnnotationTextContext = new LineAnnotationTextContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, RMGLParser.RULE_lineAnnotationText);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===33) {
				{
				{
				this.state = 45;
				this.match(RMGLParser.LineAnnotationChar);
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lineGraphicDefine(): LineGraphicDefineContext {
		let localctx: LineGraphicDefineContext = new LineGraphicDefineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, RMGLParser.RULE_lineGraphicDefine);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 51;
			this.graphicType();
			this.state = 57;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 52;
					this.variableName();
					this.state = 53;
					this.match(RMGLParser.Comma);
					}
					}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			}
			this.state = 60;
			this.variableName();
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4193792) !== 0)) {
				{
				this.state = 63;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 9:
				case 10:
				case 11:
				case 12:
				case 13:
				case 14:
				case 16:
				case 17:
				case 18:
				case 19:
				case 20:
				case 21:
					{
					this.state = 61;
					this.propertyDefine();
					}
					break;
				case 15:
					{
					this.state = 62;
					this.textDefine();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===27) {
				{
				{
				this.state = 68;
				this.match(RMGLParser.NL);
				}
				}
				this.state = 73;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public graphicType(): GraphicTypeContext {
		let localctx: GraphicTypeContext = new GraphicTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, RMGLParser.RULE_graphicType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 74;
			_la = this._input.LA(1);
			if(!(_la===1 || _la===2)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public propertyDefine(): PropertyDefineContext {
		let localctx: PropertyDefineContext = new PropertyDefineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, RMGLParser.RULE_propertyDefine);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 76;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 4161024) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 77;
			this.charText();
			this.state = 78;
			_la = this._input.LA(1);
			if(!(_la===22 || _la===23)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public textDefine(): TextDefineContext {
		let localctx: TextDefineContext = new TextDefineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, RMGLParser.RULE_textDefine);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 80;
			this.match(RMGLParser.Text);
			this.state = 81;
			this.match(RMGLParser.Quotation);
			this.state = 82;
			this.annotationText();
			this.state = 83;
			this.match(RMGLParser.AnnotationQuotation);
			this.state = 84;
			_la = this._input.LA(1);
			if(!(_la===22 || _la===23)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public annotationDefine(): AnnotationDefineContext {
		let localctx: AnnotationDefineContext = new AnnotationDefineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, RMGLParser.RULE_annotationDefine);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.match(RMGLParser.Slash);
			this.state = 87;
			this.lineAnnotationText();
			this.state = 88;
			this.match(RMGLParser.LineAnnotationNL);
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===27) {
				{
				{
				this.state = 89;
				this.match(RMGLParser.NL);
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public linkDefine(): LinkDefineContext {
		let localctx: LinkDefineContext = new LinkDefineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, RMGLParser.RULE_linkDefine);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(RMGLParser.TokenChar);
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===7) {
				{
				this.state = 96;
				this.match(RMGLParser.LArrow);
				}
			}

			this.state = 99;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 120) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8) {
				{
				this.state = 100;
				this.match(RMGLParser.RArrow);
				}
			}

			this.state = 103;
			this.match(RMGLParser.TokenChar);
			this.state = 104;
			_la = this._input.LA(1);
			if(!(_la===22 || _la===23)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 108;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===27) {
				{
				{
				this.state = 105;
				this.match(RMGLParser.NL);
				}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!RMGLParser.__ATN) {
			RMGLParser.__ATN = new ATNDeserializer().deserialize(RMGLParser._serializedATN);
		}

		return RMGLParser.__ATN;
	}


	static DecisionsToDFA = RMGLParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class StatementContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public NL_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.NL);
	}
	public NL(i: number): TerminalNode {
		return this.getToken(RMGLParser.NL, i);
	}
	public lineGraphicDefine_list(): LineGraphicDefineContext[] {
		return this.getTypedRuleContexts(LineGraphicDefineContext) as LineGraphicDefineContext[];
	}
	public lineGraphicDefine(i: number): LineGraphicDefineContext {
		return this.getTypedRuleContext(LineGraphicDefineContext, i) as LineGraphicDefineContext;
	}
	public annotationDefine_list(): AnnotationDefineContext[] {
		return this.getTypedRuleContexts(AnnotationDefineContext) as AnnotationDefineContext[];
	}
	public annotationDefine(i: number): AnnotationDefineContext {
		return this.getTypedRuleContext(AnnotationDefineContext, i) as AnnotationDefineContext;
	}
	public linkDefine_list(): LinkDefineContext[] {
		return this.getTypedRuleContexts(LinkDefineContext) as LinkDefineContext[];
	}
	public linkDefine(i: number): LinkDefineContext {
		return this.getTypedRuleContext(LinkDefineContext, i) as LinkDefineContext;
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_statement;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterStatement) {
	 		listener.enterStatement(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitStatement) {
	 		listener.exitStatement(this);
		}
	}
}


export class VariableNameContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TokenChar(): TerminalNode {
		return this.getToken(RMGLParser.TokenChar, 0);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_variableName;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterVariableName) {
	 		listener.enterVariableName(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitVariableName) {
	 		listener.exitVariableName(this);
		}
	}
}


export class CharTextContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TokenChar(): TerminalNode {
		return this.getToken(RMGLParser.TokenChar, 0);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_charText;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterCharText) {
	 		listener.enterCharText(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitCharText) {
	 		listener.exitCharText(this);
		}
	}
}


export class AnnotationTextContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public AnnotationChar_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.AnnotationChar);
	}
	public AnnotationChar(i: number): TerminalNode {
		return this.getToken(RMGLParser.AnnotationChar, i);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_annotationText;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterAnnotationText) {
	 		listener.enterAnnotationText(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitAnnotationText) {
	 		listener.exitAnnotationText(this);
		}
	}
}


export class LineAnnotationTextContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LineAnnotationChar_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.LineAnnotationChar);
	}
	public LineAnnotationChar(i: number): TerminalNode {
		return this.getToken(RMGLParser.LineAnnotationChar, i);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_lineAnnotationText;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterLineAnnotationText) {
	 		listener.enterLineAnnotationText(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitLineAnnotationText) {
	 		listener.exitLineAnnotationText(this);
		}
	}
}


export class LineGraphicDefineContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public graphicType(): GraphicTypeContext {
		return this.getTypedRuleContext(GraphicTypeContext, 0) as GraphicTypeContext;
	}
	public variableName_list(): VariableNameContext[] {
		return this.getTypedRuleContexts(VariableNameContext) as VariableNameContext[];
	}
	public variableName(i: number): VariableNameContext {
		return this.getTypedRuleContext(VariableNameContext, i) as VariableNameContext;
	}
	public Comma_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.Comma);
	}
	public Comma(i: number): TerminalNode {
		return this.getToken(RMGLParser.Comma, i);
	}
	public propertyDefine_list(): PropertyDefineContext[] {
		return this.getTypedRuleContexts(PropertyDefineContext) as PropertyDefineContext[];
	}
	public propertyDefine(i: number): PropertyDefineContext {
		return this.getTypedRuleContext(PropertyDefineContext, i) as PropertyDefineContext;
	}
	public textDefine_list(): TextDefineContext[] {
		return this.getTypedRuleContexts(TextDefineContext) as TextDefineContext[];
	}
	public textDefine(i: number): TextDefineContext {
		return this.getTypedRuleContext(TextDefineContext, i) as TextDefineContext;
	}
	public NL_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.NL);
	}
	public NL(i: number): TerminalNode {
		return this.getToken(RMGLParser.NL, i);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_lineGraphicDefine;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterLineGraphicDefine) {
	 		listener.enterLineGraphicDefine(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitLineGraphicDefine) {
	 		listener.exitLineGraphicDefine(this);
		}
	}
}


export class GraphicTypeContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Rect(): TerminalNode {
		return this.getToken(RMGLParser.Rect, 0);
	}
	public Circle(): TerminalNode {
		return this.getToken(RMGLParser.Circle, 0);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_graphicType;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterGraphicType) {
	 		listener.enterGraphicType(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitGraphicType) {
	 		listener.exitGraphicType(this);
		}
	}
}


export class PropertyDefineContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public charText(): CharTextContext {
		return this.getTypedRuleContext(CharTextContext, 0) as CharTextContext;
	}
	public X(): TerminalNode {
		return this.getToken(RMGLParser.X, 0);
	}
	public Y(): TerminalNode {
		return this.getToken(RMGLParser.Y, 0);
	}
	public W(): TerminalNode {
		return this.getToken(RMGLParser.W, 0);
	}
	public H(): TerminalNode {
		return this.getToken(RMGLParser.H, 0);
	}
	public Angle(): TerminalNode {
		return this.getToken(RMGLParser.Angle, 0);
	}
	public Color(): TerminalNode {
		return this.getToken(RMGLParser.Color, 0);
	}
	public Alpha(): TerminalNode {
		return this.getToken(RMGLParser.Alpha, 0);
	}
	public BorderColor(): TerminalNode {
		return this.getToken(RMGLParser.BorderColor, 0);
	}
	public BorderWidth(): TerminalNode {
		return this.getToken(RMGLParser.BorderWidth, 0);
	}
	public BorderAlpha(): TerminalNode {
		return this.getToken(RMGLParser.BorderAlpha, 0);
	}
	public FontSize(): TerminalNode {
		return this.getToken(RMGLParser.FontSize, 0);
	}
	public FontColor(): TerminalNode {
		return this.getToken(RMGLParser.FontColor, 0);
	}
	public Comma(): TerminalNode {
		return this.getToken(RMGLParser.Comma, 0);
	}
	public Semicolon(): TerminalNode {
		return this.getToken(RMGLParser.Semicolon, 0);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_propertyDefine;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterPropertyDefine) {
	 		listener.enterPropertyDefine(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitPropertyDefine) {
	 		listener.exitPropertyDefine(this);
		}
	}
}


export class TextDefineContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Text(): TerminalNode {
		return this.getToken(RMGLParser.Text, 0);
	}
	public Quotation(): TerminalNode {
		return this.getToken(RMGLParser.Quotation, 0);
	}
	public annotationText(): AnnotationTextContext {
		return this.getTypedRuleContext(AnnotationTextContext, 0) as AnnotationTextContext;
	}
	public AnnotationQuotation(): TerminalNode {
		return this.getToken(RMGLParser.AnnotationQuotation, 0);
	}
	public Comma(): TerminalNode {
		return this.getToken(RMGLParser.Comma, 0);
	}
	public Semicolon(): TerminalNode {
		return this.getToken(RMGLParser.Semicolon, 0);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_textDefine;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterTextDefine) {
	 		listener.enterTextDefine(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitTextDefine) {
	 		listener.exitTextDefine(this);
		}
	}
}


export class AnnotationDefineContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Slash(): TerminalNode {
		return this.getToken(RMGLParser.Slash, 0);
	}
	public lineAnnotationText(): LineAnnotationTextContext {
		return this.getTypedRuleContext(LineAnnotationTextContext, 0) as LineAnnotationTextContext;
	}
	public LineAnnotationNL(): TerminalNode {
		return this.getToken(RMGLParser.LineAnnotationNL, 0);
	}
	public NL_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.NL);
	}
	public NL(i: number): TerminalNode {
		return this.getToken(RMGLParser.NL, i);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_annotationDefine;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterAnnotationDefine) {
	 		listener.enterAnnotationDefine(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitAnnotationDefine) {
	 		listener.exitAnnotationDefine(this);
		}
	}
}


export class LinkDefineContext extends ParserRuleContext {
	constructor(parser?: RMGLParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TokenChar_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.TokenChar);
	}
	public TokenChar(i: number): TerminalNode {
		return this.getToken(RMGLParser.TokenChar, i);
	}
	public Line(): TerminalNode {
		return this.getToken(RMGLParser.Line, 0);
	}
	public SimpleLine(): TerminalNode {
		return this.getToken(RMGLParser.SimpleLine, 0);
	}
	public PolyLine(): TerminalNode {
		return this.getToken(RMGLParser.PolyLine, 0);
	}
	public CurveLine(): TerminalNode {
		return this.getToken(RMGLParser.CurveLine, 0);
	}
	public Comma(): TerminalNode {
		return this.getToken(RMGLParser.Comma, 0);
	}
	public Semicolon(): TerminalNode {
		return this.getToken(RMGLParser.Semicolon, 0);
	}
	public LArrow(): TerminalNode {
		return this.getToken(RMGLParser.LArrow, 0);
	}
	public RArrow(): TerminalNode {
		return this.getToken(RMGLParser.RArrow, 0);
	}
	public NL_list(): TerminalNode[] {
	    	return this.getTokens(RMGLParser.NL);
	}
	public NL(i: number): TerminalNode {
		return this.getToken(RMGLParser.NL, i);
	}
    public get ruleIndex(): number {
    	return RMGLParser.RULE_linkDefine;
	}
	public enterRule(listener: RMGLParserListener): void {
	    if(listener.enterLinkDefine) {
	 		listener.enterLinkDefine(this);
		}
	}
	public exitRule(listener: RMGLParserListener): void {
	    if(listener.exitLinkDefine) {
	 		listener.exitLinkDefine(this);
		}
	}
}
